--- a/web 2.0/formulario_registro.css
+++ b/web 2.0/formulario_registro.css
@@ -4,7 +4,7 @@
 form {
     margin: 5% auto 10% auto;
     width: 40%;
-    background-color: rgba(10, 30, 37, 0.91);
+    background-color: rgba(10, 30, 37);
     color: #FFFFFF;
     padding: 1% 2% 1% 2%;
     text-align: left;
