--- a/web 2.0/formulario.css
+++ b/web 2.0/formulario.css
@@ -3,7 +3,7 @@
 form {
   margin: 10% auto 20% auto;
   width: 40%;
-  background-color: rgba(10, 30, 37, 0.91);
+  background-color: rgba(10, 30, 37);
   color: #FFFFFF;
   padding: 1% 2% 1% 2%;
   text-align: left;
