--- a/web 2.0/index.css
+++ b/web 2.0/index.css
@@ -15,14 +15,14 @@
     --texto-contacto: 'Poppins', sans-serif;
 
     /* Colores */
-    --color-fondo-header: rgba(19, 22, 33, 0.91);
+    --color-fondo-header: rgba(19, 22, 33);
     --color-fondo-bloques: #0A1E25;
     --color-texto: #FFFFFF;
     --color-botones-gris: #C4C4C4;
-    --color-botones-grisTransp: rgba(149, 145, 151, 0.4);
-    --color-footer-fondo:  rgba(10, 30, 37, 0.82);
+    --color-botones-grisTransp: rgba(149, 145, 151);
+    --color-footer-fondo:  rgba(10, 30, 37);
 
-    --color-fondo-main: rgba(1, 1, 1, 0.5);
+    --color-fondo-main: rgba(10, 30, 37);
   }
 
 
@@ -72,7 +72,7 @@ body {
 .header nav a {
     font-family: var(--texto-contacto);
     color: var(--color-texto);
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     margin: 0 15px;
 
     font-size: 300;
@@ -89,14 +89,15 @@ body {
 
 .botones-header {
     background-color: var(--color-botones-grisTransp);
-    padding: 5px 20px;
+    padding: 8px 25px;
     border: 1px solid var(--color-fondo-header);
     border-radius: 10px;
 
+    color: var(--color-texto);
    
     margin-left: 20px;
     font-family: var(--texto-normal-contenido);
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 .botones-header a {
